# routes/course/course.routes.ts
@@ -1,0 +1,37 @@
+import { Router } from 'express';
+import { authenticate } from '../../middlewares/auth.middleware';
+import permit from '../../middlewares/permission.middlewares';
+import { RoleNames } from '../../schema/enums/role.enums';
+import validate from '../../middlewares/validation.middleware';
+import {
+     createCourseInput,
+     updateCourseInput,
+     updateCourseThumbnailInput,
+} from '../../schema/validators/course.validator';
+import {
+     createCourseController,
+     updateCourseController,
+     updateCourseThumbnailController,
+} from '../../controllers/course/course.controller';
+
+const courseRoutes = Router();
+
+courseRoutes.post('/', authenticate, permit(RoleNames.INSTRUCTOR), validate(createCourseInput), createCourseController);
+
+courseRoutes.put(
+     '/:id',
+     authenticate,
+     permit(RoleNames.INSTRUCTOR),
+     validate(updateCourseInput),
+     updateCourseController
+);
+
+courseRoutes.put(
+     '/:id/thumbnail',
+     authenticate,
+     permit(RoleNames.INSTRUCTOR),
+     validate(updateCourseThumbnailInput),
+     updateCourseThumbnailController
+);
+
+export default courseRoutes;
