# schema/dto/course.dto.ts
@@ -1,0 +1,24 @@
+import { ComplexityLevel } from '../enums/course.enums';
+
+export interface CreateCourseDTO {
+     title: string;
+     category: string;
+     userId: string;
+}
+
+export interface UpdateCourseDTO {
+     title?: string;
+     category?: string;
+     id: string;
+     subtitle?: string;
+     description?: string;
+     language?: string;
+     learningObjectives?: string[];
+     preRequisites?: string[];
+     complexityLevel?: ComplexityLevel;
+}
+
+export interface UpdateCourseThumbnailDTO {
+     image: string;
+     id: string;
+}
